--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "antithesis-pwa",
+  "name": "capsera",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,24 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.38.4",
-    "openai": "^5.12.2",
+    "@supabase/supabase-js": "^2.38.0",
+    "openai": "^4.100.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.1"
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
-    "autoprefixer": "^10.4.21",
     "eslint": "^9.33.0",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.4",
-    "postcss": "^8.5.6",
-    "vite": "^7.1.2",
-    "vite-plugin-pwa": "^1.0.2",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "vite": "^5.4.19",
+    "vite-plugin-pwa": "^0.17.5",
     "workbox-window": "^7.0.0"
   }
 }
