--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "name": "Capsera - Idea Submission Platform",
   "short_name": "Capsera",
   "description": "Submit and discover innovative product ideas",
+  "version": "v1.2.3",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
